--- a/CTA/CustomTeamAssigner/QMQuestions.xaml
+++ b/CTA/CustomTeamAssigner/QMQuestions.xaml
@@ -3,6 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+      xmlns:svgc="http://sharpvectors.codeplex.com/svgc/"
       mc:Ignorable="d"
       Title="QMQuestions" Height="680" Width="1260">
     
@@ -309,7 +310,7 @@
                     <ScaleTransform/>
                 </Button.RenderTransform>
                 <StackPanel Orientation="Horizontal">
-                    <Image Source="Resources/new-file.svg" Name="NewFileButtonImage" Width="30" Height="30" Margin="15"/>
+                    <svgc:SvgViewbox Source="Resources/new-file.svg" Name="NewFileButtonImage" Width="30" Height="30" Margin="15"/>
                     <TextBlock Text="Save to new file"/>
                 </StackPanel>
             </Button>
@@ -318,7 +319,7 @@
                     <ScaleTransform/>
                 </Button.RenderTransform>
                 <StackPanel Orientation="Horizontal">
-                    <Image Source="Resources/save-as.svg" Name="SaveAsButtonImage" Width="30" Height="30" Margin="15"/>
+                    <svgc:SvgViewbox Source="Resources/save-as.svg" Width="30" Height="30" Margin="15"/>
                     <TextBlock Text="Add to existing file"/>
                 </StackPanel>
             </Button>
@@ -327,7 +328,7 @@
                     <ScaleTransform/>
                 </Button.RenderTransform>
                 <StackPanel Orientation="Horizontal">
-                    <Image Source="Resources/copy.svg" Name="CopyButtonImage" Width="30" Height="30" Margin="15"/>
+                    <svgc:SvgViewbox Source="Resources/copy.svg" Width="30" Height="30" Margin="15"/>
                     <TextBlock Text="Copy"/>
                 </StackPanel>
             </Button>
@@ -336,7 +337,7 @@
                     <ScaleTransform/>
                 </Button.RenderTransform>
                 <StackPanel Orientation="Horizontal">
-                    <Image Source="Resources/back.svg" Name="BackButtonImage" Width="30" Height="30" Margin="15"/>
+                    <svgc:SvgViewbox Source="Resources/back.svg" Width="30" Height="30" Margin="15"/>
                     <TextBlock Text="Back"/>
                 </StackPanel>
             </Button>
